tests/baselines/reference/symbolType9.errors.txt
tests/cases/conformance/es6/Symbols/symbolType9.ts(3,1): error TS2367: The types of these values indicate that this condition will always be 'false'.
  Operator '==' cannot be applied to types 'symbol' and 'boolean'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(5,1): error TS2367: The types of these values indicate that this condition will always be 'true'.
  Operator '!=' cannot be applied to types 'number' and 'symbol'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(7,1): error TS2367: The types of these values indicate that this condition will always be 'false'.
  Operator '===' cannot be applied to types 'symbol' and 'number'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(9,1): error TS2367: The types of these values indicate that this condition will always be 'true'.
  Operator '!==' cannot be applied to types 'boolean' and 'symbol'.


==== tests/cases/conformance/es6/Symbols/symbolType9.ts (4 errors) ====
    var s = Symbol.for("equal");
    s == s;
    s == true;
    ~~~~~~~~~
!!! error TS2367: The types of these values indicate that this condition will always be 'false'.
!!! error TS2367:   Operator '==' cannot be applied to types 'symbol' and 'boolean'.
    s != s;
    0 != s;
    ~~~~~~
!!! error TS2367: The types of these values indicate that this condition will always be 'true'.
!!! error TS2367:   Operator '!=' cannot be applied to types 'number' and 'symbol'.
    s === s;
    s === 1;
    ~~~~~~~
!!! error TS2367: The types of these values indicate that this condition will always be 'false'.
!!! error TS2367:   Operator '===' cannot be applied to types 'symbol' and 'number'.
    s !== s;
    false !== s;
    ~~~~~~~~~~~
!!! error TS2367: The types of these values indicate that this condition will always be 'true'.
!!! error TS2367:   Operator '!==' cannot be applied to types 'boolean' and 'symbol'.